# flat_searcher

./: .env.example  .gitignore  PACKAGING.md  README.md  RUNNING_IN_PYCHARM.md  main.py  pyproject.toml
data/: flat_searcher.sqlite3-wal
project_plan/: README.md  implementation_plan.md
project_plan/source/: flat_searcher_plan_v01.txt
src/flat_searcher/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/flat_searcher/ai/: __init__.py  gemini_client.py  json_io.py  pipeline.py  prompts.py  response_schemas.py  schemas.py
src/flat_searcher/analysis/: __init__.py  product_rules.py
src/flat_searcher/db/: __init__.py  ai_repository.py  bootstrap.py  geocoding_repository.py  layout_prior_repository.py  location_repository.py  migrations.py  poi_repository.py  profile_repository.py  read_models.py  read_repository.py  repository.py  schema.sql  scoring_repository.py  session_repository.py  user_state_repository.py
src/flat_searcher/ui/: app.py  (+4 more)
tests/: test_ai_analysis_service.py  test_ai_pipeline.py  test_ai_schemas.py  test_backup.py  test_comparison_sessions.py  test_config.py  test_filtering.py  test_gemini_analysis_provider.py  test_geo.py  test_geocoding_service.py  test_image_downloader.py  test_infrastructure_service.py  test_layout_priors.py  test_location_scoring_service.py  test_map_html.py  test_mapping.py  test_overpass.py  test_presentation_titles.py  test_presentation_view_models.py  test_price_value.py  test_processing_service.py  test_product_rules.py  test_profiles.py  test_ranking.py  test_read_repository.py  test_repository.py  test_scoring.py  test_scoring_service.py  test_ss_parser.py  test_sync_service.py  test_ui_smoke.py  test_ui_workflow.py  test_user_state_repository.py
(+46 files in other folders)
