[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flat-searcher"
version = "0.1.0"
description = "Riga apartment analyzer for SS.com listings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
ai = [
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
ui = [
    "PySide6>=6.7",
]

[project.scripts]
flat-searcher = "flat_searcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flat_searcher = [
    "ui/web/*.html",
    "ui/web/*.css",
    "ui/web/*.js",
    "ui/web/vendor/*.css",
    "ui/web/vendor/leaflet/*",
    "ui/web/vendor/leaflet/images/*",
    "ui/web/vendor/markercluster/*",
    "ui/web/vendor/fonts/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
